--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "web3": "^1.0.0-beta.35",
-    "truffle-hdwallet-provider": "0.0.3"
+    "@adonisjs/vow": "^1.0.17",
+    "ganache-cli": "^6.9.1",
+    "truffle-hdwallet-provider": "0.0.3",
+    "web3": "^1.0.0-beta.35"
   },
   "devDependencies": {},
   "autoload": {
