updating .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,3 +17,11 @@ DB_PASSWORD=
 DB_DATABASE=adonis
 
 HASH_DRIVER=bcrypt
+
+MNEMONIC_WORDS=
+PROVIDER_LINK=
+BC_ADDRESS=
+SMC_ADDRESS=
+GAS=
+SMC_BUILD_NAME=
+SMC_NAME=
