--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ npm:
   - 6.4.1
 install:
   - npm i -g @adonisjs/cli
-  - cd server && touch .env && npm install
+  - cd server && mv .env.example .env && npm install
 script:
   - adonis test
