--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node.js:
   - v10.15.3
 npm:
   - 6.4.1
+sudo: false
 install:
   - npm i -g @adonisjs/cli
   - cd server && mv .env.example .env && npm install
