--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ node.js:
   - v10.15.3
 npm:
   - 6.4.1
-sudo: required
+sudo: false
 notifications:
   - email: false
 install:
   - npm i -g @adonisjs/cli
   - cd server && mv .env.example .env && npm install
-  - npm run compile
 script:
+  - mkdir app/ethereum/build
+  - chmod 0555 ./app/ethereum/build
+  - npm run compile
   - adonis test
