--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/vow": "^1.0.17",
+    "axios": "^0.19.2",
+    "ethereum-input-data-decoder": "^0.3.0",
     "ganache-cli": "^6.9.1",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.35"
