--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "chart.js": "^2.9.3",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
