--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3000/",
   "dependencies": {
     "chart.js": "^2.9.3",
+    "qrcode-generator": "^1.4.4",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.8.6",
