--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/vow": "^1.0.17",
     "axios": "^0.19.2",
+    "ethereum-event-logs": "^1.3.1",
     "ethereum-input-data-decoder": "^0.3.0",
     "ganache-cli": "^6.9.1",
     "sqlite3": "^4.1.1",
